--- a/package.json
+++ b/package.json
@@ -13,15 +13,19 @@
     "start": "nodemon ./bin/www"
   },
   "dependencies": {
+    "avro-js": "^1.11.1",
     "cassandra-driver": "^4.6.4",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "ejs": "~2.6.1",
     "express": "~4.16.1",
     "http-errors": "~1.6.3",
-    "morgan": "~1.9.1"
+    "kafka-node": "^5.0.0",
+    "morgan": "~1.9.1",
+    "redis": "^3.1.2"
   },
   "devDependencies": {
+    "@types/redis": "^4.0.11",
     "nodemon": "^2.0.20"
   }
 }
